--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,35 @@
+@-webkit-keyframes bg-scrolling-reverse {
+    100% {
+        background-position: 50px 50px;
+    }
+}
+@-moz-keyframes bg-scrolling-reverse {
+    100% {
+        background-position: 50px 50px;
+    }
+}
+@-o-keyframes bg-scrolling-reverse {
+    100% {
+        background-position: 50px 50px;
+    }
+}
+@keyframes bg-scrolling-reverse {
+    100% {
+        background-position: 50px 50px;
+    }
+}
+
 html {
-    background: whitesmoke;
+    background: url("../image/fond.png") repeat 0 0;
+    -webkit-animation: bg-scrolling-reverse 2s infinite;
+    -moz-animation: bg-scrolling-reverse 2s infinite;
+    -o-animation: bg-scrolling-reverse 2s infinite;
+    animation: bg-scrolling-reverse 2s infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+    -o-animation-timing-function: linear;
+    animation-timing-function: linear;
+
     scrollbar-width: none;
 }
 
