--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,133 +1,245 @@
-@-webkit-keyframes bg-scrolling-reverse {
-    100% {
-        background-position: 50px 50px;
-    }
-}
-@-moz-keyframes bg-scrolling-reverse {
-    100% {
-        background-position: 50px 50px;
-    }
-}
-@-o-keyframes bg-scrolling-reverse {
-    100% {
-        background-position: 50px 50px;
-    }
-}
-@keyframes bg-scrolling-reverse {
-    100% {
-        background-position: 50px 50px;
-    }
-}
-
-html {
-    background: url("../image/fond.png") repeat 0 0;
-    -webkit-animation: bg-scrolling-reverse 2s infinite;
-    -moz-animation: bg-scrolling-reverse 2s infinite;
-    -o-animation: bg-scrolling-reverse 2s infinite;
-    animation: bg-scrolling-reverse 2s infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
-    -o-animation-timing-function: linear;
-    animation-timing-function: linear;
-
-    scrollbar-width: none;
+body {
+    background-color: black;
+    color: white;
 }
 
 .body {
-    background: hsl(33, 100%, 95%);
-
-    margin: 10vh 10vw 0 10vw;
-
-    height: 80vh;
-    max-height: 80vh;
-    width: 80vw;
-
-    overflow: auto;
-    padding-bottom: 1%;
-
-    border: 2px solid black;
-    box-shadow: 10px 10px 10px darkgray;
-    border-radius: 20px;
-
-    position: relative;
-
-    text-align: center;
-}
-
-.about-me {
-    width: fit-content;
-
-    float: left;
-    padding: 3%;
-
-    line-height: 4vh;
-}
-
-a {
-    font: bold 1rem sans-serif;
-    text-transform: uppercase;
-
-    color: grey;
-    text-decoration: none;
-    padding: 0 .5em .25em;
-
-    position: relative;
-    overflow: hidden;
-    transition: .3s;
-}
-
-a:before {
-    content: "";
-    position: absolute;
-    inset: calc(100% - 3px) 0 0 0;
-    background: #ce4f20;
-    scale: 0 1;
-    transition: .3s, translate 0s .3s;
-}
-
-a:hover:before {
-    scale: 1;
-}
-
-a:hover:has(~ a:hover):before {
-    translate: 100% 0;
-    transition: .2s .2s,scale 0s .4s;
-}
-
-.contact {
-    width: fit-content;
-
-    float: right;
-    padding: 2%;
-
-    line-height: 5vh;
-}
-
-hr {
-    width: 80%;
-    border: none;
-    border-top: 3px double #727272;
-    color: #727272;
-}
-
-.marquee {
-    width: 75%;
-    left: 50%;
-    transform: translateX(-50%);
-    overflow-x: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;
-    position: relative;
-}
-
-.marquee-content {
     display: flex;
-    animation: marquee 60s linear infinite;
+    flex-direction: column;
+}
 
-    height: 100%;
+.HeaderButton {
+    display: flex;
+    justify-content: right;
+}
+
+.AboutMeButton {
+    background-color: black;
+    width: 129px;
+
+    margin-right: 10px;
+    padding: 10px;
+    border-radius: 10px;
     
-    position: relative;
+    cursor: pointer;
+}
+
+.AboutMeButton a {
+    all: unset;
+    color: white;
+    font-size: 18px;
+}
+
+.Contact {
+    width: 129px;
+
+    padding: 10px;
+    border-radius: 10px;
+
+    font-size: 18px;
+
+    cursor: pointer;
+}
+
+.DivProfilePicture {
+    display: flex;
+    justify-content: center;
+
+    margin-top: 10vh;
+}
+
+.ProfilePicture {
+    border-radius: 50%;
+    width: 20vw;
+}
+
+.Name {
+    display: flex;
+    justify-content: center;
+
+    font-size: 40px;
+    font-weight: 900;
+
+    background-image: linear-gradient(to right, darkblue, darkblue, brown, brown);
+    color: transparent;
+    background-clip: text;
+}
+
+.Intro {
+    max-width: 50%;
+    margin: 0 auto;
+
+    font-size: 18px;
+}
+
+.DivContactMe {
+    margin-top: 30px;
+
+    display: flex;
+    justify-content: center;
+}
+
+.ContactMe {
+    background-color: black;
+    color: white;
+    
+    cursor: pointer;
+    
+    width: 129px;
+    
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+
+    font-size: 18px;
+}
+
+.AboutMe {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.AboutMe h1 {
+    font-size: 45px;
+    font-weight: 900;
+
+    background-image: linear-gradient(to right, darkblue, brown);
+    color: transparent;
+    background-clip: text;
+}
+
+.AboutMe p {
+    max-width: 50vw;
+    text-align: justify;
+}
+
+.SchoolProjects {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.SchoolProjects h1 {
+    font-size: 45px;
+    font-weight: 900;
+
+    background-image: linear-gradient(to right, darkblue, brown);
+    color: transparent;
+    background-clip: text;
+}
+
+
+
+
+
+
+
+
+.PersonnalProjects {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.PersonnalProjects h1 {
+    font-size: 45px;
+    font-weight: 900;
+
+    background-image: linear-gradient(to right, darkblue, brown);
+    color: transparent;
+    background-clip: text;
+}
+
+
+
+
+
+
+
+.popupContact {
+    position: fixed;
+    top: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    z-index: 10;
+}
+
+.popupContact .div {
+    background: rgba(255, 255, 255, 0.2);
+    width: 50%;
+
+    border-radius: 25px;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.popupContact .closePopup {
     width: fit-content;
+    padding: 5px;
+    border-radius: 100%;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+
+    position: absolute;
+    right: 10px;
+}
+
+.popupContact a {
+    all: unset;
+    cursor: pointer;
+
+    background-image: linear-gradient(to right, red, yellow);
+    color: transparent;
+    background-clip: text;
+}
+
+
+
+.Footer {
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.Invert {
+    filter: invert(1);
+}
+
+.Logo {
+    width: 50px;
+}
+
+.SchoolProjectsDetail {
+    display: flex;
+    max-width: 70%;
+    overflow-x: auto;
+}
+
+.PersonnalProjectsDetail {
+    display: flex;
+    max-width: 70%;
+    overflow-x: auto;
 }
 
 .marquee-content-slot {
@@ -135,24 +247,27 @@ hr {
     word-wrap: break-word;
     box-sizing: border-box;
 
-    width: 40vw;
-    position: relative;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 20px;
 
-    max-height: 20%;
-    overflow-y: hidden;
-
-    margin: 0 30px;
-    padding: 0 20px;
-    border: 2px solid black;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    border-radius: 20px;
+    height: 50vh;
 
     cursor: help;
 }
 
+.marquee-content-div {
+    width: 20vw;
+    margin-bottom: 70px;
+}
+
+.marquee-content-slot-name {
+    float: left;
+}
+
 .marquee-content-slot-langage {
-    position: absolute;
-    right: 5%;
+    float: right;
 }
 
 .popupBackground {
@@ -169,11 +284,12 @@ hr {
 
 .popupBody {
     background: white;
+    color: black;
     
     width: 65%;
     max-height: 90%;
     
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 10px;
     
     margin: 2px;
@@ -186,26 +302,31 @@ hr {
     text-align: center;
 }
 
+.popupHeader {
+    display: flex;
+}
+
 .closeBtn {
     position: fixed;
     
     border: none;
-    border-radius: 50%;
+    border-radius: 100%;
 
-    left: 19%;
     padding: 5px;
 
     cursor: pointer;
 }
 
+.ExerciceName {
+    margin: auto;
+}
+
 .langage {
-    float: right;
+    margin-right: 15px;
 }
 
 .githubLink {
     width: 50px;
-
-    float: right;
 }
 
 img {
