--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,13 +131,6 @@ body {
     background-clip: text;
 }
 
-
-
-
-
-
-
-
 .PersonnalProjects {
     margin-top: 150px;
     display: flex;
@@ -154,12 +147,6 @@ body {
     background-clip: text;
 }
 
-
-
-
-
-
-
 .popupContact {
     position: fixed;
     top: 0;
@@ -167,13 +154,12 @@ body {
     width: 100%;
     height: 100%;
 
-    background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     z-index: 10;
 }
 
 .popupContact .div {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0, 0, 0, 0.5);
     width: 50%;
 
     border-radius: 25px;
@@ -213,8 +199,6 @@ body {
     color: transparent;
     background-clip: text;
 }
-
-
 
 .Footer {
     margin-top: 150px;
@@ -272,7 +256,6 @@ body {
 
 .popupBackground {
     position: fixed;
-    background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
     top: 0;
@@ -280,16 +263,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(10px);
 }
 
 .popupBody {
-    background: white;
-    color: black;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
     
     width: 65%;
     max-height: 90%;
     
-    border: 2px solid white;
+    border: 1px solid white;
     border-radius: 10px;
     
     margin: 2px;
