--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,8 +24,8 @@ button:hover {
 }
 
 .HeaderButton {
-    display: flex;
-    justify-content: right;
+    position: fixed;
+    right: 10px;
 }
 
 .AboutMeButton {
