use more color for the background stars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -400,7 +400,6 @@ li {
     left: 0;
     width: var(--star-tail-length);
     height: var(--star-tail-height);
-    color: rgba(255, 255, 255, 0.5);
     background: linear-gradient(45deg, currentColor, transparent);
     border-radius: 50%;
     filter: drop-shadow(0 0 6px currentColor);
@@ -413,304 +412,361 @@ li {
     }
   }
   .star:nth-child(1) {
+    color: rgba(255, 255, 255, 0.7);
     --star-tail-length: 5.59em;
     --top-offset: 66.36vh;
     --fall-duration: 6.193s;
     --fall-delay: 1.023s;
   }
   .star:nth-child(2) {
+    color: rgba(250, 250, 250, 0.7);
     --star-tail-length: 5.91em;
     --top-offset: 99.92vh;
     --fall-duration: 9.877s;
     --fall-delay: 5.8s;
   }
   .star:nth-child(3) {
+    color: rgba(240, 240, 240, 0.7);
     --star-tail-length: 5.36em;
     --top-offset: 46.69vh;
     --fall-duration: 8.49s;
     --fall-delay: 5.077s;
   }
   .star:nth-child(4) {
+    color: rgba(230, 230, 230, 0.7);
     --star-tail-length: 7.45em;
     --top-offset: 80.13vh;
     --fall-duration: 6.711s;
     --fall-delay: 9.055s;
   }
   .star:nth-child(5) {
+    color: rgba(220, 220, 220, 0.7);
     --star-tail-length: 7.22em;
     --top-offset: 71.19vh;
     --fall-duration: 6.769s;
     --fall-delay: 9.015s;
   }
   .star:nth-child(6) {
+    color: rgba(245, 245, 255, 0.7);
     --star-tail-length: 6.65em;
     --top-offset: 34.08vh;
     --fall-duration: 6.711s;
     --fall-delay: 3.855s;
   }
   .star:nth-child(7) {
+    color: rgba(235, 245, 255, 0.7);
     --star-tail-length: 7.19em;
     --top-offset: 43.97vh;
     --fall-duration: 10.388s;
     --fall-delay: 3.537s;
   }
   .star:nth-child(8) {
+    color: rgba(250, 245, 235, 0.7);
     --star-tail-length: 5.83em;
     --top-offset: 68.26vh;
     --fall-duration: 10.501s;
     --fall-delay: 3.506s;
   }
   .star:nth-child(9) {
+    color: rgba(255, 248, 240, 0.7);
     --star-tail-length: 5.89em;
     --top-offset: 61vh;
     --fall-duration: 9.895s;
     --fall-delay: 5.881s;
   }
   .star:nth-child(10) {
+    color: rgba(245, 245, 238, 0.7);
     --star-tail-length: 7.29em;
     --top-offset: 24.87vh;
     --fall-duration: 10.667s;
     --fall-delay: 7.379s;
   }
   .star:nth-child(11) {
+    color: rgba(255, 223, 0, 0.7);
     --star-tail-length: 5.93em;
     --top-offset: 43.4vh;
     --fall-duration: 9.847s;
     --fall-delay: 3.716s;
   }
   .star:nth-child(12) {
+    color: rgba(255, 239, 184, 0.7);
     --star-tail-length: 5.46em;
     --top-offset: 69.76vh;
     --fall-duration: 6.701s;
     --fall-delay: 7.451s;
   }
   .star:nth-child(13) {
+    color: rgba(255, 250, 200, 0.7);
     --star-tail-length: 6.29em;
     --top-offset: 62.17vh;
     --fall-duration: 10.883s;
     --fall-delay: 5.809s;
   }
   .star:nth-child(14) {
+    color: rgba(255, 245, 210, 0.7);
     --star-tail-length: 5.79em;
     --top-offset: 68.31vh;
     --fall-duration: 8.666s;
     --fall-delay: 9.995s;
   }
   .star:nth-child(15) {
+    color: rgba(255, 215, 100, 0.7);
     --star-tail-length: 5.34em;
     --top-offset: 50.59vh;
     --fall-duration: 7.575s;
     --fall-delay: 5.077s;
   }
   .star:nth-child(16) {
+    color: rgba(255, 230, 150, 0.7);
     --star-tail-length: 7.44em;
     --top-offset: 27.23vh;
     --fall-duration: 8.894s;
     --fall-delay: 9.407s;
   }
   .star:nth-child(17) {
+    color: rgba(255, 240, 180, 0.7);
     --star-tail-length: 6.03em;
     --top-offset: 94.12vh;
     --fall-duration: 7.676s;
     --fall-delay: 4.619s;
   }
   .star:nth-child(18) {
+    color: rgba(250, 220, 120, 0.7);
     --star-tail-length: 5.88em;
     --top-offset: 98.46vh;
     --fall-duration: 7.748s;
     --fall-delay: 4.187s;
   }
   .star:nth-child(19) {
+    color: rgba(245, 215, 140, 0.7);
     --star-tail-length: 6.2em;
     --top-offset: 93.98vh;
     --fall-duration: 6.37s;
     --fall-delay: 1.424s;
   }
   .star:nth-child(20) {
+    color: rgba(255, 205, 60, 0.7);
     --star-tail-length: 6.97em;
     --top-offset: 98.05vh;
     --fall-duration: 7.674s;
     --fall-delay: 3.865s;
   }
   .star:nth-child(21) {
+    color: rgba(220, 240, 255, 0.7);
     --star-tail-length: 6.32em;
     --top-offset: 87.32vh;
     --fall-duration: 6.887s;
     --fall-delay: 6.951s;
   }
   .star:nth-child(22) {
+    color: rgba(200, 230, 255, 0.7);
     --star-tail-length: 6.35em;
     --top-offset: 3.22vh;
     --fall-duration: 7.144s;
     --fall-delay: 5.994s;
   }
   .star:nth-child(23) {
+    color: rgba(173, 216, 230, 0.7);
     --star-tail-length: 5.52em;
     --top-offset: 85.89vh;
     --fall-duration: 6.002s;
     --fall-delay: 0.951s;
   }
   .star:nth-child(24) {
+    color: rgba(180, 220, 255, 0.7);
     --star-tail-length: 5.98em;
     --top-offset: 74.81vh;
     --fall-duration: 7.935s;
     --fall-delay: 6.438s;
   }
   .star:nth-child(25) {
+    color: rgba(135, 206, 250, 0.7);
     --star-tail-length: 5.97em;
     --top-offset: 49.17vh;
     --fall-duration: 10.85s;
     --fall-delay: 7.1s;
   }
   .star:nth-child(26) {
+    color: rgba(140, 210, 255, 0.7);
     --star-tail-length: 5.06em;
     --top-offset: 11.96vh;
     --fall-duration: 10.448s;
     --fall-delay: 3.699s;
   }
   .star:nth-child(27) {
+    color: rgba(160, 220, 255, 0.7);
     --star-tail-length: 6.41em;
     --top-offset: 57.3vh;
     --fall-duration: 8.34s;
     --fall-delay: 8.201s;
   }
   .star:nth-child(28) {
+    color: rgba(100, 149, 237, 0.7);
     --star-tail-length: 6.17em;
     --top-offset: 40.59vh;
     --fall-duration: 10.308s;
     --fall-delay: 3.408s;
   }
   .star:nth-child(29) {
+    color: rgba(115, 175, 250, 0.7);
     --star-tail-length: 6.3em;
     --top-offset: 39.78vh;
     --fall-duration: 9.258s;
     --fall-delay: 3.478s;
   }
   .star:nth-child(30) {
+    color: rgba(176, 224, 230, 0.7);
     --star-tail-length: 6.99em;
     --top-offset: 54.44vh;
     --fall-duration: 11.934s;
     --fall-delay: 8.316s;
   }
   .star:nth-child(31) {
+    color: rgba(170, 210, 250, 0.7);
     --star-tail-length: 6.05em;
     --top-offset: 90vh;
     --fall-duration: 10.118s;
     --fall-delay: 7.053s;
   }
   .star:nth-child(32) {
+    color: rgba(185, 235, 255, 0.7);
     --star-tail-length: 5.12em;
     --top-offset: 32.78vh;
     --fall-duration: 9.98s;
     --fall-delay: 4.143s;
   }
   .star:nth-child(33) {
+    color: rgba(165, 190, 240, 0.7);
     --star-tail-length: 5.15em;
     --top-offset: 64.99vh;
     --fall-duration: 9.985s;
     --fall-delay: 6.713s;
   }
   .star:nth-child(34) {
+    color: rgba(200, 230, 250, 0.7);
     --star-tail-length: 5.95em;
     --top-offset: 3.43vh;
     --fall-duration: 7.417s;
     --fall-delay: 5.398s;
   }
   .star:nth-child(35) {
+    color: rgba(150, 200, 255, 0.7);
     --star-tail-length: 6.19em;
     --top-offset: 75.56vh;
     --fall-duration: 7.186s;
     --fall-delay: 9.14s;
   }
   .star:nth-child(36) {
+    color: rgba(221, 160, 221, 0.7);
     --star-tail-length: 6.92em;
     --top-offset: 55.96vh;
     --fall-duration: 8.416s;
     --fall-delay: 8.875s;
   }
   .star:nth-child(37) {
+    color: rgba(230, 190, 255, 0.7);
     --star-tail-length: 5.11em;
     --top-offset: 13.97vh;
     --fall-duration: 11.773s;
     --fall-delay: 2.963s;
   }
   .star:nth-child(38) {
+    color: rgba(255, 182, 193, 0.7);
     --star-tail-length: 7.15em;
     --top-offset: 9.67vh;
     --fall-duration: 8.171s;
     --fall-delay: 9.862s;
   }
   .star:nth-child(39) {
+    color: rgba(240, 160, 240, 0.7);
     --star-tail-length: 5.78em;
     --top-offset: 6.85vh;
     --fall-duration: 11.748s;
     --fall-delay: 7.572s;
   }
   .star:nth-child(40) {
+    color: rgba(255, 160, 220, 0.7);
     --star-tail-length: 6.2em;
     --top-offset: 68.14vh;
     --fall-duration: 6.464s;
     --fall-delay: 2.759s;
   }
   .star:nth-child(41) {
+    color: rgba(255, 210, 240, 0.7);
     --star-tail-length: 6.18em;
     --top-offset: 91.19vh;
     --fall-duration: 7.683s;
     --fall-delay: 0.4s;
   }
   .star:nth-child(42) {
+    color: rgba(210, 180, 230, 0.7);
     --star-tail-length: 7.41em;
     --top-offset: 85.47vh;
     --fall-duration: 8.933s;
     --fall-delay: 9.498s;
   }
   .star:nth-child(43) {
+    color: rgba(240, 230, 255, 0.7);
     --star-tail-length: 6.61em;
     --top-offset: 78.81vh;
     --fall-duration: 10.654s;
     --fall-delay: 8.897s;
   }
   .star:nth-child(44) {
+    color: rgba(230, 220, 250, 0.7);
     --star-tail-length: 5.92em;
     --top-offset: 12.02vh;
     --fall-duration: 9.887s;
     --fall-delay: 0.248s;
   }
   .star:nth-child(45) {
+    color: rgba(250, 215, 245, 0.7);
     --star-tail-length: 6.4em;
     --top-offset: 80.35vh;
     --fall-duration: 6.716s;
     --fall-delay: 3.119s;
   }
   .star:nth-child(46) {
+    color: rgba(144, 238, 144, 0.7);
     --star-tail-length: 6.5em;
     --top-offset: 25.39vh;
     --fall-duration: 11.242s;
     --fall-delay: 3.484s;
   }
   .star:nth-child(47) {
+    color: rgba(175, 238, 238, 0.7);
     --star-tail-length: 6.43em;
     --top-offset: 96.43vh;
     --fall-duration: 7.785s;
     --fall-delay: 4.253s;
   }
   .star:nth-child(48) {
+    color: rgba(180, 255, 220, 0.7);
     --star-tail-length: 6.59em;
     --top-offset: 24.43vh;
     --fall-duration: 8.493s;
     --fall-delay: 9.934s;
   }
   .star:nth-child(49) {
+    color: rgba(200, 240, 210, 0.7);
     --star-tail-length: 6.74em;
     --top-offset: 27.27vh;
     --fall-duration: 11.358s;
     --fall-delay: 5.769s;
   }
   .star:nth-child(50) {
+    color: rgba(180, 240, 220, 0.7);
     --star-tail-length: 5.27em;
     --top-offset: 64.76vh;
     --fall-duration: 9.438s;
     --fall-delay: 1.777s;
+  }
+  .star:nth-child(51) {
+    color: rgba(255, 255, 255, 0.7);
+    --star-tail-length: 5.59em;
+    --top-offset: 66.36vh;
+    --fall-duration: 6.193s;
+    --fall-delay: 1.023s;
   }
   .star::before, .star::after {
     position: absolute;
