--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-width: none;
+}
+
 body {
     background-color: black;
     color: white;
@@ -125,7 +129,7 @@ h1 {
 }
 
 .popupContact .div {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(50, 50, 50, 0.8);
     width: fit-content;
     padding: 0 100px;
     border-radius: 25px;
@@ -153,18 +157,24 @@ h1 {
     right: 10px;
 }
 
-.popupContact .closePopup:hpver {
+.popupContact .closePopup:hover {
     width: fit-content;
     height: fit-content;
+    transform: scale(1.25);
 }
 
 .popupContact a {
-    all: unset;
     cursor: pointer;
-    background-image: linear-gradient(to right, red, yellow);
+    background: linear-gradient(to right, red, yellow);
     color: transparent;
     background-clip: text;
 }
+
+.popupContact a:hover {
+    background: linear-gradient(to right, yellow, red);
+    background-clip: text;
+}
+
 
 .Footer {
     margin-top: 150px;
@@ -197,7 +207,7 @@ h1 {
 }
 
 .marquee-content-slot:hover {
-    width: 30vw;
+    width: 35vw;
     height: 55vh;
 }
 
@@ -212,7 +222,7 @@ h1 {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    width: 25vw;
+    width: 30vw;
     height: 50vh;
     overflow-y: auto;
     cursor: help;
@@ -242,11 +252,11 @@ h1 {
 }
 
 .popupBody {
-    background: rgba(0, 0, 0, 0.5);
+  background: rgba(50, 50, 50, 0.8);
     color: white;
     width: 65%;
     max-height: 90%;
-    border: 1px solid white;
+    scrollbar-width: none;
     border-radius: 10px;
     margin: 2px;
     padding: 1%;
@@ -257,6 +267,7 @@ h1 {
 
 .popupHeader {
     display: flex;
+    align-items: center;
 }
 
 .closeBtn {
@@ -267,11 +278,19 @@ h1 {
     border-radius: 100%;
     padding: 5px;
     cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+    transition: 0.3s;
+    color: white;
 }
 
 .closeBtn:hover {
     width: fit-content;
     height: fit-content;
+
+    transform: scale(1.25);
 }
 
 .ExerciceName {
@@ -286,10 +305,16 @@ h1 {
     width: 50px;
 }
 
+.githubLink:hover {
+  transform: scale(1.2);
+  transition: 0.2s ease;
+}
+
 img {
     max-width: 100%;
     border-radius: 10px;
-    margin: 2% 0;
+    margin: 5% auto;
+    display: block;
 }
 
 li {
