--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,6 +180,15 @@ h1 {
     margin-top: 150px;
     display: flex;
     justify-content: center;
+    gap: 10px;
+}
+
+.Footer a {
+  transition: 0.5s ease;
+}
+
+.Footer a:hover {
+  transform: scale(1.25);
 }
 
 .Invert {
