--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,7 +217,7 @@ h1 {
 
 .marquee-content-slot:hover {
     width: 35vw;
-    height: 55vh;
+    height: 98%;
 }
 
 .marquee-content-slot {
@@ -319,16 +319,25 @@ h1 {
   transition: 0.2s ease;
 }
 
+.description {
+  text-align: start;
+}
+
 img {
-    max-width: 100%;
+    max-width: 70%;
     border-radius: 10px;
     margin: 5% auto;
     display: block;
 }
 
-li {
-    text-align: center;
-    list-style-position: inside;
+.DivList ul li {
+  text-align: center;
+  list-style-position: inside;
+}
+
+.GroupMembers h5 li {
+  text-align: center;
+  list-style-position: inside;
 }
 
 .DivImage {
