--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,13 +20,17 @@ button {
 }
 
 button:hover {
-    width: 150px;
-    height: 65px;
+    transform: scale(1.2);
 }
 
 .body {
     display: flex;
     flex-direction: column;
+}
+
+@keyframes padding_left_reveal {
+  from { right: -50%; }
+  to { right: 10px; }
 }
 
 .HeaderButton {
@@ -35,19 +39,16 @@ button:hover {
 }
 
 .AboutMeButton {
-    background-color: black;
-    width: 129px;
-    height: 55px;
-    margin-right: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.AboutMeButton a {
-    all: unset;
     color: white;
     font-size: 18px;
+    background-color: black;
+    width: fit-content;
+    height: 55px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .Contact {
@@ -65,11 +66,20 @@ button:hover {
     margin-top: 10vh;
 }
 
-.ProfilePicture {
-    border-radius: 50%;
-    width: 20vw;
+@keyframes scale_reveal {
+  from { transform: scale(0) }
+  to { transform: scale(1) }
 }
 
+.ProfilePicture {
+  border-radius: 50%;
+  width: 20vw;
+}
+
+@keyframes margin_top_reveal {
+  from { margin-top: 100% }
+  to { margin-top: 0 }
+}
 .Name {
     display: flex;
     justify-content: center;
@@ -97,6 +107,11 @@ button:hover {
     padding: 10px;
     border-radius: 10px;
     font-size: 18px;
+}
+
+.title {
+  font-size: 50px;
+  margin-top: 0;
 }
 
 .AboutMe {
@@ -131,7 +146,7 @@ h1 {
 .popupContact .div {
     background: rgba(50, 50, 50, 0.8);
     width: fit-content;
-    padding: 0 100px;
+    padding: 10px 100px;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
